--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "2.8.5",
     "express": "4.17.1",
+    "express-session": "^1.17.1",
     "jwt-simple": "0.5.6",
     "knex": "0.20.7",
     "moment": "^2.24.0",
